fix(client): cover shift 0

--- a/client/stylesheets/showcase.scss
+++ b/client/stylesheets/showcase.scss
@@ -67,7 +67,7 @@
     }
     .image-layer {
       background-size: cover;
-      background-position: 0 70%;
+      background-position: 0 0;
     }
 
     // default
