--- a/client/views/home/home.scss
+++ b/client/views/home/home.scss
@@ -41,11 +41,6 @@
     .showcase-content {
       align-items: flex-start !important;
     }
-    .background-showcase {
-      .image-layer {
-        background-position: 0 93% !important;
-      }
-    }
     &__title {
       h1 {
         font-family: $fontMonoton;
